# cto-agent

./: README.md  azure.yaml  pyproject.toml
.github/workflows/: README.md  ci.yml  deploy.yml
src/cto_agent/: __init__.py  agent.py
tests/: __init__.py  conftest.py  test_cto_agent.py
